--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
   <main>
 <pre>
-# Membean - Undetected Membean 
-## Use this program/guide to automatically fill out your Membean. 
-### i'm not responsible for your usage; this is simply an open guide. Please don't use it at school.
+Membean - Undetected Membean 
+use this program/guide to automatically fill out your Membean. 
+i'm not responsible for your usage; this is simply an open guide. Please don't use it at school.
 ________________________________________________________________________________________________________________________________
 </pre>
 
@@ -90,12 +90,12 @@ ________________________________________________________________________________
 10. If using my login, enable assistant. Otherwise, read the info below
 11. Wait however long you need.
 12. Enjoy your view.
-## Please change your config. I'll have a list of good configurations, but I suggest human-like or realistic ones. You should NOT use perfect & fast-paced. Unaware at this time whether it works on quizzes, but please have academic integrity. This is an open-source project (the custom configurations and modifications) that I would hate to have to take down due to my school's policies. DO NOT USE AT SCHOOL. USE IN CONTROLLED ENVIRONMENTS
+Please change your config. I'll have a list of good configurations, but I suggest human-like or realistic ones. You should NOT use perfect & fast-paced. Unaware at this time whether it works on quizzes, but please have academic integrity. This is an open-source project (the custom configurations and modifications) that I would hate to have to take down due to my school's policies. DO NOT USE AT SCHOOL. USE IN CONTROLLED ENVIRONMENTS
 </pre>
 
 <h2># Break the paywall:</h2>
 <pre>
-## YOU NEED CASHAPP. JUST THE APP AND DO NOT PUT A WORKING CARD OR YOU WILL BE CHARGED!!! I HAVE OLD VANILLA CARDS AVAILABLE TO GET INFO FROM IF NEED BE
+YOU NEED CASHAPP. JUST THE APP AND DO NOT PUT A WORKING CARD OR YOU WILL BE CHARGED!!! I HAVE OLD VANILLA CARDS AVAILABLE TO GET INFO FROM IF NEED BE
 1. Open Wembean
 2. Make sure you're logged in
 3. Click purchase subscription
@@ -105,7 +105,7 @@ ________________________________________________________________________________
 7. Click agree
 8. Wait 1-10 minutes
 9. Enjoy premium
-## Please be sure not to use a real card, or you'll be charged. I strongly suggest using either my logins or vanilla cards.
+Please be sure not to use a real card, or you'll be charged. I strongly suggest using either my logins or vanilla cards.
 </pre>
 
 <p>hi</p>
