Update formatting and headings in configs.html

--- a/configs.html
+++ b/configs.html
@@ -25,11 +25,11 @@
 
   <main>
 <pre>
-# Everything typed should be the only things on.
+Everything typed should be the only things on.
 
-## Config 1:
+Config 1:
 
-### Accuracy: 
+Accuracy: 
 OVR - 85-95%
   CWB 15%
 Multiple Choice:
@@ -39,7 +39,7 @@ Error Correction:
   Double Backspace
 Mistakes - Medium
 
-### Timing:
+Timing:
   Typing Speed:
 WPM: 45-70
 Variation: 10%
@@ -50,14 +50,14 @@ BW: 0.1-0.25
 BQ: 2-3.5
 CAD: 0.5
 
-### Security:
+Security:
   Detection Avoidance: Advanced
   (everything else the same)
 
-### Visuals:
+Visuals:
 Enable Visuals
 
-# more configs coming soon
+more configs coming soon
 </pre>
   </main>
 </body>
